Cambios en scripts, .scss y .html

--- a/F1nalLap/src/app/pages/home/home.component.html
+++ b/F1nalLap/src/app/pages/home/home.component.html
@@ -12,13 +12,13 @@
         <div id="progress-container">
             <nav>
                 <a href="home">Inicio</a>
-                <a href="temp_act.html">Temporada Actual</a>
+                <a href="temp-actual">Temporada Actual</a>
                 <a href="ult_temp.html">Últimas Temporadas</a>
                 <a href="temp_mem.html">Temporadas Memorables</a>
                 <a href="prueba.html">Prueba</a>
                 <a href="openf1_carreras.html">Carreras</a>
                 <a href="openf1_drivers.html">Pilotos</a>
-                <a href="API-sports.html">Api Sport</a>
+                <a href="API-sports.html">Api Sport (no funciona)</a>
             </nav>
 
             <div id="progress-bar"></div>
@@ -26,7 +26,7 @@
 
 
         <div class="contenedor-section">
-            <section id="inicio" style="margin: 15px 0;">
+            <section id="inicio">
 
                 <h2>Bienvenidos a la página de F1</h2>
 
@@ -110,4 +110,3 @@
 
 </div>
 
-<script src="src/assets/scripts/barra_deslizante.js"></script>
