--- a/F1nalLap/src/app/pages/temp-actual/temp-actual.component.html
+++ b/F1nalLap/src/app/pages/temp-actual/temp-actual.component.html
@@ -8,14 +8,11 @@
 
       <div id="progress-container">
         <nav>
-          <a href="index.html">Inicio</a>
-          <a href="temp_act.html">Temporada Actual</a>
-          <a href="ult_temp.html">Últimas Temporadas</a>
-          <a href="temp_mem.html">Temporadas Memorables</a>
-          <a href="prueba.html">Prueba</a>
-          <a href="openf1_carreras.html">Carreras</a>
-          <a href="openf1_drivers.html">Pilotos</a>
-          <a href="API-sports.html">Api Sport</a>
+          <a href="home">Inicio</a>
+          <a href="temp-actual">Temporada Actual</a>
+          <a href="last-temps">Últimas Temporadas</a>
+          <a href="memorable-temps">Temporadas Memorables</a>
+
         </nav>
 
         <div id="progress-bar"></div>
