--- a/F1nalLap/src/app/pages/home/home.component.html
+++ b/F1nalLap/src/app/pages/home/home.component.html
@@ -14,7 +14,7 @@
                 <a href="home">Inicio</a>
                 <a href="temp-actual">Temporada Actual</a>
                 <a href="last-temps">Últimas Temporadas</a>
-                <a href="memorable-temps">Temporadas Memorables</a>
+                <a href="memorable-temps">Temporadas Memorables</a>x
             </nav>
 
             <div id="progress-bar"></div>
