Añadimos la página de Simulacion

--- a/F1nalLap/src/app/pages/home/home.component.html
+++ b/F1nalLap/src/app/pages/home/home.component.html
@@ -14,7 +14,8 @@
                 <a href="home">Inicio</a>
                 <a href="temp-actual">Temporada Actual</a>
                 <a href="last-temps">Últimas Temporadas</a>
-                <a href="memorable-temps">Temporadas Memorables</a>x
+                <a href="memorable-temps">Temporadas Memorables</a>
+                <a href="sim">Simulador</a>
             </nav>
 
             <div id="progress-bar"></div>
@@ -43,12 +44,12 @@
                 <h2>¿Qué encontrarás aquí?</h2>
 
                 <ul>
-                    <li><strong><a href="temp_act.html">Temporada Actual:</a></strong> Información detallada sobre
+                    <li><strong><a href="temp-actual">Temporada Actual:</a></strong> Información detallada sobre
                         los
                         equipos, pilotos y el calendario de la temporada en curso.</li>
-                    <li><strong><a href="ult_temp.html">Últimas Temporadas:</a></strong> Resúmenes y análisis de las
+                    <li><strong><a href="last-temps">Últimas Temporadas:</a></strong> Resúmenes y análisis de las
                         temporadas recientes, destacando los momentos más emocionantes.</li>
-                    <li><strong><a href="temp_mem.html">Temporadas Memorables:</a></strong> Un vistazo a las
+                    <li><strong><a href="memorable-temps">Temporadas Memorables:</a></strong> Un vistazo a las
                         temporadas
                         más icónicas de la historia de la Fórmula 1, con un enfoque especial en las hazañas de
                         pilotos
