--- a/F1nalLap/src/app/pages/last-temps/last-temps.component.html
+++ b/F1nalLap/src/app/pages/last-temps/last-temps.component.html
@@ -13,8 +13,8 @@
                 <a href="temp-actual">Temporada Actual</a>
                 <a href="last-temps">Últimas Temporadas</a>
                 <a href="memorable-temps">Temporadas Memorables</a>
-
-              </nav>
+                <a href="sim">Simulador</a>
+            </nav>
 
             <div id="progress-bar"></div>
         </div>
