Implementamos archivo con datos de circuitos y creamos una página para su visualización

--- a/F1nalLap/src/app/pages/sim/sim.component.html
+++ b/F1nalLap/src/app/pages/sim/sim.component.html
@@ -20,115 +20,10 @@
       <div id="progress-bar"></div>
     </div>
 
-    <div class="tarjetas-contenedor">
-      <!-- Tarjeta 1 -->
-      <div class="tarjeta">
-        <div class="tarjeta-imagen">
-          <img
-            src="https://media.api-sports.io/formula-1/circuits/4.png"
-            alt="Imagen de ejemplo"
-          />
-        </div>
-        <div class="tarjeta-contenido">
-          <h3>Título de la Tarjeta 1</h3>
-          <p>
-            Descripción breve de la tarjeta. Puedes poner aquí un resumen del
-            contenido.
-          </p>
-          <a href="#" class="boton">Ver más</a>
-        </div>
-      </div>
+    <!-- CONTENEDOR DINÁMICO -->
+    <div class="tarjetas-contenedor" id="tarjetas"></div>
 
-      <!-- Tarjeta 2 -->
-      <div class="tarjeta">
-        <div class="tarjeta-imagen">
-          <img
-            src="https://via.placeholder.com/300x200"
-            alt="Imagen de ejemplo"
-          />
-        </div>
-        <div class="tarjeta-contenido">
-          <h3>Título de la Tarjeta 2</h3>
-          <p>
-            Descripción breve de la tarjeta. Puedes poner aquí un resumen del
-            contenido.
-          </p>
-          <a href="#" class="boton">Ver más</a>
-        </div>
-      </div>
 
-      <!-- Tarjeta 3 -->
-      <div class="tarjeta">
-        <div class="tarjeta-imagen">
-          <img
-            src="https://via.placeholder.com/300x200"
-            alt="Imagen de ejemplo"
-          />
-        </div>
-        <div class="tarjeta-contenido">
-          <h3>Título de la Tarjeta 3</h3>
-          <p>
-            Descripción breve de la tarjeta. Puedes poner aquí un resumen del
-            contenido.
-          </p>
-          <a href="#" class="boton">Ver más</a>
-        </div>
-      </div>
-
-      <!-- Tarjeta 4 -->
-      <div class="tarjeta">
-        <div class="tarjeta-imagen">
-          <img
-            src="https://via.placeholder.com/300x200"
-            alt="Imagen de ejemplo"
-          />
-        </div>
-        <div class="tarjeta-contenido">
-          <h3>Título de la Tarjeta 4</h3>
-          <p>
-            Descripción breve de la tarjeta. Puedes poner aquí un resumen del
-            contenido.
-          </p>
-          <a href="#" class="boton">Ver más</a>
-        </div>
-      </div>
-
-      <!-- Tarjeta 5 -->
-      <div class="tarjeta">
-        <div class="tarjeta-imagen">
-          <img
-            src="https://via.placeholder.com/300x200"
-            alt="Imagen de ejemplo"
-          />
-        </div>
-        <div class="tarjeta-contenido">
-          <h3>Título de la Tarjeta 5</h3>
-          <p>
-            Descripción breve de la tarjeta. Puedes poner aquí un resumen del
-            contenido.
-          </p>
-          <a href="#" class="boton">Ver más</a>
-        </div>
-      </div>
-
-      <!-- Tarjeta 6 -->
-      <div class="tarjeta">
-        <div class="tarjeta-imagen">
-          <img
-            src="https://via.placeholder.com/300x200"
-            alt="Imagen de ejemplo"
-          />
-        </div>
-        <div class="tarjeta-contenido">
-          <h3>Título de la Tarjeta 6</h3>
-          <p>
-            Descripción breve de la tarjeta. Puedes poner aquí un resumen del
-            contenido.
-          </p>
-          <a href="#" class="boton">Ver más</a>
-        </div>
-      </div>
-    </div>
   </div>
 
   <footer>
@@ -137,3 +32,5 @@
     >
   </footer>
 </div>
+
+<script src = "./../../../assets/js/tarjetas.js" defer></script>
