Cambio de nombre de un componente

--- a/F1nalLap/src/app/pages/memorable-temps/memorable-temps.component.html
+++ b/F1nalLap/src/app/pages/memorable-temps/memorable-temps.component.html
@@ -12,7 +12,7 @@
                 <a href="temp-actual">Temporada Actual</a>
                 <a href="last-temps">Últimas Temporadas</a>
                 <a href="memorable-temps">Temporadas Memorables</a>
-                <a href="sim">Simulador</a>
+                <a href="circuits">Circuitos</a>
             </nav>
 
             <div id="progress-bar"></div>
