Mostramos circuitos en página

--- a/F1nalLap/src/app/pages/memorable-temps/memorable-temps.component.html
+++ b/F1nalLap/src/app/pages/memorable-temps/memorable-temps.component.html
@@ -9,9 +9,9 @@
 
             <nav>
                 <a href="home">Inicio</a>
-                <a href="temp-actual">Temporada Actual</a>
-                <a href="last-temps">Últimas Temporadas</a>
-                <a href="memorable-temps">Temporadas Memorables</a>
+                <a href="actual">Temporada Actual</a>
+                <a href="last">Últimas Temporadas</a>
+                <a href="memorable">Temporadas Memorables</a>
                 <a href="circuits">Circuitos</a>
             </nav>
 
