Pasamos parametro id en la url para mostrar circuito seleccionado

--- a/F1nalLap/src/app/pages/circuits/circuits.component.html
+++ b/F1nalLap/src/app/pages/circuits/circuits.component.html
@@ -33,7 +33,8 @@
               Vueltas: {{ circuito.laps }} | Longitud: {{ circuito.length }}
             </p>
             <p>Récord: {{ circuito.lap_record }}</p>
-            <a href="Proximamente..." class="boton">Simular</a>
+            <a [routerLink]="['/simulador', circuito.id]" class="boton">Simular</a>
+
           </div>
         </div>
       </div>
