Ajuste en los enlaces a páginas

--- a/F1nalLap/src/app/pages/simulador/simulador.component.html
+++ b/F1nalLap/src/app/pages/simulador/simulador.component.html
@@ -11,10 +11,10 @@
 
     <div id="progress-container">
       <nav>
-        <a href="home">Inicio</a>
-        <a href="actual">Temporada Actual</a>
-        <a href="last">Últimas Temporadas</a>
-        <a href="memorable">Temporadas Memorables</a>
+        <a href="../home">Inicio</a>
+        <a href="../actual">Temporada Actual</a>
+        <a href="../last">Últimas Temporadas</a>
+        <a href="../memorable">Temporadas Memorables</a>
         <a href="../circuits">Circuitos</a>
       </nav>
 
