--- a/F1nalLap/src/app/pages/simulador/simulador.component.scss
+++ b/F1nalLap/src/app/pages/simulador/simulador.component.scss
@@ -77,13 +77,13 @@
 /* 🎯 Responsive */
 @media (min-width: 769px) and (max-width: 1024px) {
   .tarjetas-contenedor {
-    margin: 0 50px;
+    margin: 2rem auto;
   }
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
   .tarjetas-contenedor {
-    margin: 0 20px;
+    margin: 2rem auto;
     padding: 0.75rem;
   }
 
@@ -102,7 +102,7 @@
 
 @media (max-width: 480px) {
   .tarjetas-contenedor {
-    margin: 0 10px;
+    margin: 2rem auto;
     padding: 0.5rem;
   }
 
